# forsage

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  travis_build.sh
cmake/: common.cmake
include/forsage/: algorithm.hpp  execution_chain.hpp  execution_element.hpp  receiver.hpp  signal.hpp  source.hpp
include/forsage/memory_management/: allocator.hpp  memory_management.hpp  utitily.hpp
include/forsage/private/: functional_traits.hpp
include/forsage/private/algorithm/: filter.hpp
src/: memory_management.cpp
test/: CmakeLists.txt  algorithm_test.cpp  functional_traits_test.cpp  signal_test.cpp  test_main.cpp
tests/: CmakeLists.txt  algorithm_test.cpp  functional_traits_test.cpp  memory_leak_detector.cpp  memory_leak_detector.hpp  memory_manager.cpp  memory_manager.hpp  signal_test.cpp  test_main.cpp
